--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "KotoriK",
+  "repository": {"url": "https://github.com/KotoriK/rndimg-api"},
   "dependencies": {
     "@vercel/node": "^1.11.0"
   }
